# lpcv

./: CMakeLists.txt  README.md  gaussian.cpp  image.cpp  imagereader.cpp  imagereader.h  lpcv.cpp  lpcv.h  main.cpp  show.cpp  show.h  vcpkg.json  viewer.cpp
include/: internal.h  lpcv.h
include/lpcv/: bytearray.h  convolution.h  enum.h  gaussian.h  image.h  imagereader.h  kernel.h  misc.h  operators.h  vec.h  viewer.h
include/tests/: convolution_t.h
lpcv/: gaussian.h  image.h  imagereader.h  kernel.h  vec.h  viewer.h
src/: convolution.cpp  gaussian.cpp  imagereader.cpp  lpcv.cpp  main.cpp  operators.cpp  viewer.cpp
tests/: convolution_t.cpp  test.cpp
triplets/: x64-windows-custom.cmake
